src/objects/CarSale__c.object
<CustomObject>
    <fields>
        <fullName>CarBrand__c</fullName>
        <formula>TEXT(RelatedCar__r.RelatedCarType__r.CarBrand__c)</formula>
        <label>Car Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarLicense__c</fullName>
        <formula>RelatedCar__r.Car_License__c</formula>
        <label>Car License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarTypeId__c</fullName>
        <formula>RelatedCar__r.CarTypeId__c</formula>
        <label>Car Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(RelatedCar__r.CarCountry__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>RelatedCar__r.RelatedCarType__r.Model__c</formula>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RelatedCar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Car Sales</relationshipLabel>
        <relationshipName>Car_Sales</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT( RelatedCar__r.RelatedCarType__r.BodyStyle__c )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Car Sale</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Car Sale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>